<resources>
	<string name="parse_application_id">V0c7q2d6VCVuc0LXZmk3ZZbUjI4UMhIrgWmekZxP</string>
	<string name="parse_client_key">VjtLo0qel4L3hpWSModBkBB4oPEUUEZHikHOVo7z</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_phone">Your device does not support phone call feature</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="category_list">Choose Category</string>
    <string name="search">Search Menu</string>
	<string name="detail">Detail</string>
	<string name="add">Add this to my order</string>
	<string name="share_btn">Share this</string>
	<string name="share">Share</string>
    <string name="alert">Failed to connect internet!</string>
    <string name="not_found">Not Found!</string>
    <string name="number_order">Number of order : </string>
    <string name="order">Order</string>
    <string name="my_order">Detail Oerder</string>
    <string name="total_order">Total Order :</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
	<string name="clear_one_order">Do you want to clear this order?</string>
	<string name="db_exist_alert">Do you want to remove your previous order?</string>
	<string name="confirm">Confirmation</string>
	<string name="reservation">Reservation</string>
	<string name="your_name">Your Name</string>
	<string name="address">Your Address</string>
	<string name="city">Your City</string>
	<string name="province">Your Province</string>
	<string name="email">Your Email</string>
	<string name="number_of_people">Number of people</string>
	<string name="date">Set Date</string>
	<string name="time">Set Time</string>
	<string name="phone_number">Phone Number</string>
	<string name="order_list">Order List</string>
	<string name="send_reservation">Send</string>
	<string name="form_alert">Please, complete the form first.</string>
	<string name="sending_alert">Sending data. Please wait &#8230;</string>
	<string name="ok_alert">Your Order has been successfully sent.</string>
	<string name="failed_alert">Your Order has not been sent.</string>
	<string name="no_order">Your Cart is Empty, Please Order first.</string>
	<string name="check_order_later">Check if you want to order later</string>
	<string name="order_later">#Order later</string>
	<string name="desc_list_item_icon">Item Icon</string>
	<string name="no_order_menu">No order</string>
	<string name="order_alert">You have not ordered yet</string>
	<string name="add_comment">Comment (Optional)</string>
	<string name="menu_settings">Settings</string>
	<string name="app_info">App Info</string>
	<string name="main_menu">Main Menu</string>
	<string name="title_activity_home">Home</string>
	<string name="more">More Apps</string>
	<string name="rate">Rate Apps</string>
	<string-array name="main_menu_list">
        <item >List Menu</item>
        <item >Your Order</item>
        <item >Confirmation</item>
    </string-array>
	<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
	<string name="menu_product">Product</string>
	<string name="menu_cart">Cart</string>
	<string name="menu_checkout">Checkout</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_info">Information</string>
	<string name="menu_about">About</string>
	<string name="menu_share">Share</string>
	<string name="menu_contact">Contact</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Product</item>
        <item>Cart</item>
        <item>Checkout</item>
        <item>Profile</item>
        <item>Information</item>
        <item>About</item>
        <item>Share</item>
        <item>Contact</item>
        <item>Exit</item>       
    </string-array>
	<string name="profile_tab1">    
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	<string name="profile_tab2">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	<string name="information_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	<string name="information_tab2">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
	<string name="beardIMG">BeardIMG</string>
	<string name="login">Login</string>
	<string name="emailAddress">Email Address</string>
	<string name="password">Password</string>
	<string name="abdul_rahuman">Abdul Rahuman</string>
	<string name="hello">Hello,</string>
	<string name="book_appointments">Book Appointments</string>
	<string name="view_appointments">View Appointments</string>
	<string name="look_for_nearby_salons">Look for nearby salons</string>
	<string name="add_notes">Add Notes</string>
	<string name="bookappointmentsimg">bookAppointmentsImg</string>
	<string name="viewappointmentsimg">viewAppointmentsImg</string>
	<string name="discover_more">Discover.</string>
	<string name="downarrowicon">downArrowIcon</string>
	<string name="mapicon">mapIcon</string>
	<string name="notesicon">notesIcon</string>
	<string name="profile">Profile</string>
	<string name="your">Your</string>
	<string name="user_profile_img">User Profile IMG</string>
	<string name="full_name">Full Name</string>
	<string name="abdul_rahuman_abdul_ali">Abdul Rahuman Abdul Ali</string>
	<string name="ar5_gmail_com">ar5@gmail.com</string>
	<string name="randomString">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
	<string name="_12345">12345</string>
	<string name="update_profile">Update Profile</string>
	<string name="bio">Bio</string>
	<string name="shop_for_items">Shop for items</string>
	<string name="welcome_back">Welcome Back!</string>
	<string name="enter_your_email_address">Enter Your Email Address</string>
	<string name="enter_your_password">Enter Your Password</string>
	<string name="forgot_password">Forgot Password</string>
	<string name="new_user_sign_up_now">New user? Sign Up now!</string>
	<string name="forgot_your_password">Forgot Your Password?</string>
	<string name="regain_access_to_your_account">Regain access to your account!</string>
	<string name="enter_your_registered_email">Enter your registered email</string>
	<string name="tap_here_to_recover">Tap here to recover</string>
	<string name="go_back_to_login_screen">Go back to Login Screen</string>
	<string name="login_to_continue">Login to Continue</string>
	<string name="login_as_admin_instead">Login As Admin Instead</string>
</resources>