<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".loginPage">

    <ProgressBar
        android:id="@+id/progressbarofloginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goToForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible">

    </ProgressBar>

    <RelativeLayout
        android:id="@+id/centerLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="42sp"
            android:textColor="@color/baPrimary"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textSize="23sp"
            android:textColor="@color/baPrimaryDark">
        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine"
        android:layout_marginBottom="10dp"
        android:id="@+id/emailAddress"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmail"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLine"
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPassword"
            android:hint="@string/enter_your_password"
            >
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_design">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/goToForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/white">

    </TextView>

    <TextView
        android:id="@+id/goToAdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goToForgotPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_as_admin_instead"
        android:textAlignment="center"
        android:textColor="@color/white">

    </TextView>

    <RelativeLayout
        android:id="@+id/goToSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/new_user_sign_up_now"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="85dp"
        android:contentDescription="@string/beardIMG"
        app:srcCompat="@drawable/beard"
        app:tint="@color/white" />

</RelativeLayout>