<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".forgotPassword">

    <RelativeLayout
        android:id="@+id/centerLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textSize="42sp"
            android:textColor="@color/baPrimary"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regain_access_to_your_account"
            android:textSize="23sp"
            android:textColor="@color/baPrimaryDark">
        </TextView>

    </LinearLayout>

    <EditText
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_registered_email">

    </EditText>

    <Button
        android:id="@+id/passwordRecoverButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/centerLine3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/tap_here_to_recover">

    </Button>

    <RelativeLayout
        android:id="@+id/goToLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:id="@+id/goBackToLogin"
            android:text="@string/go_back_to_login_screen"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


</RelativeLayout>